# delegate-attr

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
src/: lib.rs
tests/compile_fail/: call-eq.rs  call-eq.stderr  call-path.rs  call-path.stderr  call-str.rs  call-str.stderr  delegate-empty.rs  delegate-empty.stderr  delegate-extern.rs  delegate-extern.stderr  delegate-struct.rs  delegate-struct.stderr  duplicate-call.rs  duplicate-call.stderr  duplicate-into.rs  duplicate-into.stderr  fn-arg-empty.rs  fn-arg-empty.stderr  fn-arg-no-self.rs  fn-arg-no-self.stderr  into-extra-eq.rs  into-extra-eq.stderr  into-extra-parens.rs  into-extra-parens.stderr  invalid-impl-cfg.rs  invalid-impl-cfg.stderr  invalid-impl.rs  invalid-impl.stderr  non-ident-arg.rs  non-ident-arg.stderr
tests/pass/: custom-self-type.rs  default-return.rs  fn-call.rs  fn-inline-attr.rs  fn-into.rs  fn-plain.rs  impl-call.rs  impl-cfg.rs  impl-constraint.rs  impl-generic.rs  impl-in-macro.rs  impl-into.rs  impl-refcell.rs  impl-struct-field.rs  impl-trait.rs  impl-tuple-like.rs
